<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smart Vpen</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="error_location_provider">error_location_provider</string>
    <string name="title_activity_drama_recycle_view">來看看自己的紀錄以及其他人的創作吧！</string>
    <string name="non_empty_query">Query should not be empty</string>
    <string name="btn_voice_text">Presiona quui</string>
    <string name="permission_denied">Permission Denied</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_score_title">Your Score</string>
    <string name="detail_dialog_title">Detail</string>
    <string name="original">Original</string>
    <string name="translation">\nTranslation</string>
    <string name="detail_dialog_translating">Please wait. Translating...</string>
    <string name="Listen">Listen</string>
    <string name="CANCEL">CANCEL</string>
    <string name="answer_diff_title">Correct answer</string>
    <string name="user_diff_title">Your answer</string>
    <string name="user_diff_left_title">Chatbot Speak</string>
    <string name="wrong_word_title">Words</string>
    <string name="greeting">Hello</string>
    <string name="welcome">Welcome to Vpen System!</string>
    <string name="item1">Chatbot</string>
    <string name="item2">Rank</string>
    <string name="title_activity_maps">Map</string>
    <string name="leaderboard_name">LEADERBOARD</string>
    <string name="no_result_found">No Result Found</string>
    <string name="capture" />
    <string name="preview_area" />

    <string name="title_submit_video">Upload/Take a short video</string>
    <string name="title_recognition_result">Recognition Result:</string>
    <string name="button_take_video">Take Video</string>
    <string name="button_choose_video">Choose Video</string>
    <string name="choose_media">Choose Action:</string>
    <string name="button_media_video">Video Mode</string>
    <string name="button_media_image">Image Mode</string>
    <string name="title_video_maker">Video - Drama Maker (try to take video and make your drama)</string>
    <string name="default_video_label">label by recognize</string>
    <string name="dialog_input">Try to write down your drama here....</string>
    <string name="recognizebutton">recognize</string>
    <string name="save_video_drama">save</string>
    <string name="title_watch_share">~"Watching" or "Sharing" with your classmates~</string>
    <string name="title_watch_share_situation">Situation</string>
    <string name="title_watch_share_search">Search: English Learning</string>
    <string name="dialog_input_activity4">write down your Search</string>
</resources>
