<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/wooden1"
    tools:context="com.naer.pdfreader.activity_drama_video">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"></LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/title_video_maker"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_card">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/video_preview"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@mipmap/play2"></ImageView>

                        <VideoView
                            android:id="@+id/video_play"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:visibility="gone">

                        </VideoView>

                        <ImageView
                            android:id="@+id/add_video"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingTop="@dimen/_50sdp"
                            android:paddingBottom="@dimen/_50sdp"
                            android:src="@mipmap/add"></ImageView>

                    </LinearLayout>

                </HorizontalScrollView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_12sdp"
                        android:layout_weight="1.2"
                        android:background="@drawable/bg_card">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            android:orientation="vertical">

                            <Button
                                android:id="@+id/recognizebutton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                android:text="@string/recognizebutton"
                                android:textSize="20sp"></Button>

                            <ListView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:layout_weight="0.64"
                        android:background="@drawable/bg_card"
                        android:padding="@dimen/_5sdp">


                        <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <EditText
                                    android:id="@+id/editTextTextMultiLine2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@null"
                                    android:ems="10"
                                    android:gravity="start|top"
                                    android:hint="@string/dialog_input"
                                    android:inputType="textMultiLine"
                                    android:textSize="28sp" />
                            </LinearLayout>
                        </ScrollView>


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginLeft="@dimen/_5sdp"

                        android:layout_marginBottom="@dimen/_10sdp"
                        android:layout_weight="1.2"
                        android:background="@drawable/bg_card"
                        android:padding="@dimen/_5sdp">


                        <Button
                            android:id="@+id/recordvideo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:drawableLeft="@drawable/record_111"
                            android:text="rec" />

                        <Button
                            android:id="@+id/stoplayerofvideorec"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableLeft="@drawable/record_222"
                            android:layout_weight="5"
                            android:text="stop" />
                        <Button
                        android:id="@+id/displayvideorec"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                            android:drawableLeft="@drawable/playvoice_333"
                        android:text="display" />
                        <Button
                            android:id="@+id/savefile"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:drawableLeft="@drawable/save4"
                            android:text="@string/save_video_drama" />

                    </LinearLayout>

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
